--- a/itwoxtest-ui/src/views/NavBar/navbar.scss
+++ b/itwoxtest-ui/src/views/NavBar/navbar.scss
@@ -5,6 +5,10 @@
         justify-content: flex-end;
         padding: 2% 2%;
         gap: 2rem;
+        box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(21px);
+  background: #fefefe;
+
 
     .menu-container{
         display: flex;
