--- a/itwoxtest-ui/src/views/NavBar/navbar.scss
+++ b/itwoxtest-ui/src/views/NavBar/navbar.scss
@@ -1,35 +1,27 @@
-.navbar-container{
-    list-style: none;
-        display: flex;
-        width: 96%;
-        justify-content: flex-end;
-        padding: 2% 2%;
-        gap: 2rem;
-        box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.25);
+.navbar-container {
+  list-style: none;
+  display: flex;
+  width: 96%;
+  justify-content: space-between;
+  padding: 1% 2%;
+  gap: 2rem;
+  box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(21px);
   background: #fefefe;
+  
+  .sign-out-button,
+  .sign-in-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+  }
 
-
-    .menu-container{
-        display: flex;
-        gap: 2rem;
-        .tab {
-        font-family: "Arial", sans-serif;
-        font-size: 1vw;
-        font-style: normal;
-        font-weight: 700;
-        line-height: normal;
-        letter-spacing: 0.36px;
-        color: #0a0a0a;
-        text-decoration: none;
-
-        &:hover,
-        &:active {
-          color: #00a3b7;
-          border-bottom: 2px solid #00a3b7;
-          padding-bottom: 5px;
-        }
-      }
-        
-    }
+  .sign-out-button:hover,
+  .sign-in-button:hover {
+    background-color: #0056b3;
+  }
 }
