--- a/itwoxtest-ui/src/views/SignIn.js/signin.scss
+++ b/itwoxtest-ui/src/views/SignIn.js/signin.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('your-background-image.jpg');
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
   background-size: cover;
   backdrop-filter: blur(10px);
 }
