--- a/itwoxtest-ui/src/views/NavBar/navbar.scss
+++ b/itwoxtest-ui/src/views/NavBar/navbar.scss
@@ -5,10 +5,8 @@
   justify-content: space-between;
   padding: 1% 2%;
   gap: 2rem;
-  box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(21px);
-  background: #fefefe;
-  
+  background:#91d7f5;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   .sign-out-button,
   .sign-in-button {
     padding: 10px 20px;
