Add landing page image at background

--- a/itwoxtest-ui/src/views/NavBar/navbar.scss
+++ b/itwoxtest-ui/src/views/NavBar/navbar.scss
@@ -5,8 +5,9 @@
   justify-content: space-between;
   padding: 1% 2%;
   gap: 2rem;
-  background:#91d7f5;
+  background:#9598f3;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  
   .sign-out-button,
   .sign-in-button {
     padding: 10px 20px;
